--- a/index.html
+++ b/index.html
@@ -1,7 +1,75 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<meta charset="utf-8"/>
+		<title>Portfolio Site, Alec Ansusinha</title>
+		<meta name="description" content="Alec Ansusinha Portfolio" />
+        <meta name="keywords" content="GIS, maps, IUCN, geography, conservation" />
+		<meta name="author" content="Alec Ansusinha" />
+		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
+		<!-- Style of the component -->
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<!--[if lt IE 9]>
+		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+		<script type='text/javascript' src='js/respond.min.js'></script>
+		<noscript>
+			<link rel="stylesheet" type="text/css" href="css/styleNoJS.css" />
+		</noscript>
+		<!-- Fonts Used Google Links-->
+	</head>
+	<body>
+		<div id="va-accordion" class="va-container" style="margin-top:0px;">
+				<div class="va-nav">
+					<span class="va-nav-prev" style="top:10px;">Previous</span>
+					<span class="va-nav-next" style="bottom:10px;">Next</span>
+				</div>
+				<div class="va-wrapper">
+					<div class="va-slice va-slice-color-1">
+						<h3 class="va-title">GIS by AA</h3>
+						<div class="va-content">
+							<p>About this site</p>
+							<ul>
+								<li><a href="#">About</a></li>
+								<li><a href="#">Portfolio</a></li>
+								<li><a href="#">Contact</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="va-slice va-slice-color-2">
+						<h3 class="va-title">Management</h3>
+						<div class="va-content">
+							<p>Keith Johnson</p>
+							<ul>
+								<li><a href="#">About</a></li>
+								<li><a href="#">Portfolio</a></li>
+								<li><a href="#">Contact</a></li>
+							</ul>
+						</div>	
+					</div>
+					<div class="va-slice va-slice-color-3">
+						<h3 class="va-title">Visual Design</h3>
+						<div class="va-content">
+							<p>Andrew Alaniz</p>
+							<ul>
+								<li><a href="#">About</a></li>
+								<li><a href="#">Portfolio</a></li>
+								<li><a href="#">Contact</a></li>
+							</ul>
+						</div>	
+					</div>
+					<div class="va-slice va-slice-color-4">
+						<h3 class="va-title">Quality Control</h3>
+						<div class="va-content">
+							<p>Ben Freeman</p>
+							<ul>
+								<li><a href="#">About</a></li>
+								<li><a href="#">Portfolio</a></li>
+								<li><a href="#">Contact</a></li>
+							</ul>
+						</div>	
+					</div>	
+				</div>
+			</div>
+	</body>
 </html>
