Add First Project
Samut Prakan

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						</div>	
 					</div>
 					<div class="va-slice va-slice-color-3">
-						<h3 class="va-title">Visual Design</h3>
+						<h3 class="va-title">Data</h3>
 						<div class="va-content">
 							<p>Andrew Alaniz</p>
 							<ul>
@@ -55,7 +55,7 @@
 						</div>	
 					</div>
 					<div class="va-slice va-slice-color-4">
-						<h3 class="va-title">Quality Control</h3>
+						<h3 class="va-title">Contact</h3>
 						<div class="va-content">
 							<p>Ben Freeman</p>
 							<ul>
