--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 					<div class="va-slice va-slice-color-2">
 						<h3 class="va-title">IUCN</h3>
 						<div class="va-content">
-							<p>Keith Johnson</p>
+							<p>Projects</p>
 							<ul>
-								<li><a href="#">About</a></li>
+								<li><a href="GEOJSONSamutPrakan/InteractiveMapSamutPrakan.html">Samut Prakan Shrimp Farms</a></li>
 								<li><a href="#">Portfolio</a></li>
 								<li><a href="#">Contact</a></li>
 							</ul>
