--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<div class="va-content">
 							<p>Projects</p>
 							<ul>
-								<li><a href="GeoJSONSamutPrakan/InteractiveMapSamutPrakan.html">Samut Prakan Shrimp Farms</a></li>
+								<li><a href="ProjSP/ProjSP.html">Samut Prakan Shrimp Farms</a></li>
 								<li><a href="#">Portfolio</a></li>
 								<li><a href="#">Contact</a></li>
 							</ul>
