--- a/ProjSP/ProjSP.html
+++ b/ProjSP/ProjSP.html
@@ -174,6 +174,7 @@
 			info.addTo(map);
                     
             
-        </script>  
+        </script>
+        <div style="margin-bottom: 1%; margin-right: 1%; background-color:#fff; padding: 5px;"><a href="../index.html">Back</a></div>  
 	</body>
 </html>
