--- a/ProjSP/ProjSP.html
+++ b/ProjSP/ProjSP.html
@@ -9,6 +9,7 @@
             #map { height: 100%;}
             body { padding: 0; margin: 0 }
             .info { padding: 6px 8px; font: 14px/18px Arial, Helvetica, sans-serif; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; } .info h4 { margin: 0 0 5px; color: #777; }
+            #back-button a { text-decoration: none; font: 14px/18px Arial, Helvetica, sans-serif; position:absolute; bottom: 1%; left: 1%; z-index: 999; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; padding: 5px;}
         </style>
 	</head>
 	<body>
@@ -175,6 +176,6 @@
                     
             
         </script>
-        <div style="margin-bottom: 1%; margin-right: 1%; background-color:#fff; padding: 5px;"><a href="../index.html">Back</a></div>  
+        <div id="back-button"><a href="../index.html">Back to Projects</a></div>  
 	</body>
 </html>
