--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
 		<!-- Style of the component -->
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link href='http://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
 		<!--[if lt IE 9]>
 		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -25,11 +26,11 @@
 						<h3 class="va-title">About</h3>
 						<div class="va-content">
 							<p>About this site</p>
-							<ul>
-								<li><a href="#">About</a></li>
-								<li><a href="#">Portfolio</a></li>
-								<li><a href="#">Contact</a></li>
-							</ul>
+							<h4>
+								This site has been created to help share the geographic visualizations of projects of IUCN, International Union for Conservation of Nature Thailand Programme.
+								<br/>
+
+							</h4>
 						</div>
 					</div>
 					<div class="va-slice va-slice-color-2">
@@ -37,9 +38,7 @@
 						<div class="va-content">
 							<p>Projects</p>
 							<ul>
-								<li><a href="ProjSP/ProjSP.html">Samut Prakan Shrimp Farms</a></li>
-								<li><a href="#">Portfolio</a></li>
-								<li><a href="#">Contact</a></li>
+								<li><a href="ProjSP/ProjSP.html"><img src="img/MapDefault-01.png"/><div id="caption">Samut Prakan Farms</div></a></li>
 							</ul>
 						</div>	
 					</div>
