Update Portfolio Page
Updates portfolio page to get rid of default text

--- a/index.html
+++ b/index.html
@@ -45,23 +45,14 @@
 					<div class="va-slice va-slice-color-3">
 						<h3 class="va-title">Data</h3>
 						<div class="va-content">
-							<p>Andrew Alaniz</p>
-							<ul>
-								<li><a href="#">About</a></li>
-								<li><a href="#">Portfolio</a></li>
-								<li><a href="#">Contact</a></li>
-							</ul>
+							Coming soon, data used in the projects showcased on this site may be downloaded here.
 						</div>	
 					</div>
 					<div class="va-slice va-slice-color-4">
 						<h3 class="va-title">Contact</h3>
 						<div class="va-content">
-							<p>Ben Freeman</p>
-							<ul>
-								<li><a href="#">About</a></li>
-								<li><a href="#">Portfolio</a></li>
-								<li><a href="#">Contact</a></li>
-							</ul>
+							If you have any questions about the maps or data presented here, please contact Alec Ansusinha at <a href="emailto:a.ansusinha@gmail.com">a.ansusinha@gmail.com</a><br>
+							If you are interested in the work of IUCN Thailand, please visit their website <a href="http://www.iucn.org/thailand">here</a>.
 						</div>	
 					</div>	
 				</div>
