--- a/index.html
+++ b/index.html
@@ -45,14 +45,24 @@
 					<div class="va-slice va-slice-color-3">
 						<h3 class="va-title">Data</h3>
 						<div class="va-content">
-							Coming soon, data used in the projects showcased on this site may be downloaded here.
+							<p>Coming Soon!</p>
+							<h4>
+								As available, data used in the projects showcased on this site may be downloaded here.
+
+							</h4>
 						</div>	
 					</div>
 					<div class="va-slice va-slice-color-4">
 						<h3 class="va-title">Contact</h3>
 						<div class="va-content">
-							If you have any questions about the maps or data presented here, please contact Alec Ansusinha at <a href="emailto:a.ansusinha@gmail.com">a.ansusinha@gmail.com</a><br>
-							If you are interested in the work of IUCN Thailand, please visit their website <a href="http://www.iucn.org/thailand">here</a>.
+						<p>Coming Soon!</p>
+							<h4>
+								If you have any questions about the maps or data presented here, please contact Alec Ansusinha at <a href="emailto:a.ansusinha@gmail.com">a.ansusinha@gmail.com</a><br>
+								If you are interested in the work of IUCN Thailand, please visit their website <a href="http://www.iucn.org/thailand">here</a>.
+								<br/>
+
+							</h4>
+							
 						</div>	
 					</div>	
 				</div>
