--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 							<p>Projects</p>
 							<ul>
 								<li><a href="ProjSP/ProjSP.html"><img src="img/MapDefault-01.png"/><div id="caption">Samut Prakan Farms</div></a></li>
+								<li><a href="ProjBanBaKhamin/BanBaKhamin.html"><img src="img/MapDefault-01.png"/><div id="caption">Ban Ba Khamin Village</div></a></li>
 							</ul>
 						</div>	
 					</div>
@@ -47,7 +48,7 @@
 						<div class="va-content">
 							<p>Coming Soon!</p>
 							<h4>
-								As available, data used in the projects showcased on this site may be downloaded here.
+								As it becomes available, data used in the projects showcased on this site may be downloaded here.
 
 							</h4>
 						</div>	
@@ -55,7 +56,7 @@
 					<div class="va-slice va-slice-color-4">
 						<h3 class="va-title">Contact</h3>
 						<div class="va-content">
-						<p>Coming Soon!</p>
+						<p>Reach out!</p>
 							<h4>
 								If you have any questions about the maps or data presented here, please contact Alec Ansusinha at <a href="emailto:a.ansusinha@gmail.com">a.ansusinha@gmail.com</a><br>
 								If you are interested in the work of IUCN Thailand, please visit their website <a href="http://www.iucn.org/thailand">here</a>.
