--- a/ProjBanBaKhamin/BanBaKhamin.html
+++ b/ProjBanBaKhamin/BanBaKhamin.html
@@ -25,7 +25,7 @@
             #map { height: 100%;}
             body { padding: 0; margin: 0 }
             .info { padding: 6px 8px; font: 14px/18px Arial, Helvetica, sans-serif; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; } .info h4 { margin: 0 0 5px; color: #777; }
-            #back-button a { text-decoration: none; font: 14px/18px Arial, Helvetica, sans-serif; position:absolute; bottom: 1%; left: 1%; z-index: 999; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; padding: 5px;}
+            #back-button a { text-decoration: none; font: 14px/18px Arial, Helvetica, sans-serif; position:absolute; bottom: 1%; left: 120px; z-index: 999; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; padding: 5px;}
         </style>
         <script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
         <script src="https://gist.github.com/raw/4504864/c9ef880071f959398b7cf0b687d4f37c352ea86d/leaflet-google.js"></script> 
