--- a/ProjBanBaKhamin/BanBaKhamin.html
+++ b/ProjBanBaKhamin/BanBaKhamin.html
@@ -27,7 +27,7 @@
             .info { padding: 6px 8px; font: 14px/18px Arial, Helvetica, sans-serif; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; } .info h4 { margin: 0 0 5px; color: #777; }
             #back-button a { text-decoration: none; font: 14px/18px Arial, Helvetica, sans-serif; position:absolute; bottom: 1%; left: 120px; z-index: 999; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; padding: 5px;}
 
-            .leaflet-popup  .leaflet-zoom-animated {
+            .leaflet-popup {
                 width: 200px;
             }
         </style>
@@ -158,6 +158,7 @@
                         return {color: feature.properties.border_color_qgis2leaf,
                                 fillColor: feature.properties.color_qgis2leaf,
                                 weight: 2,
+                                dashArray: '3',
                                 opacity: feature.properties.transp_qgis2leaf,
                                 fillOpacity: feature.properties.transp_qgis2leaf};
                         }
