--- a/ProjBanBaKhamin/BanBaKhamin.html
+++ b/ProjBanBaKhamin/BanBaKhamin.html
@@ -29,6 +29,10 @@
 
             .leaflet-popup {
                 width: 200px;
+
+            }
+            .leaflet-bottom .leaflet-control-scale {
+                margin-bottom: 45px;
             }
         </style>
         <script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
