Popup Width Fix

--- a/ProjBanBaKhamin/BanBaKhamin.html
+++ b/ProjBanBaKhamin/BanBaKhamin.html
@@ -177,7 +177,7 @@
                         exp_VillageBoundsJSON.addTo(map);
                             function pop_Survey112414(feature, layer) {
                                         
-    var popupContent = '<img src="' + Autolinker.link(String(feature.properties['Pic'])) + '" style="max-width: 100%; height: auto;"/><table><tr><th scope="row">Name</th><td>' + Autolinker.link(String(feature.properties['Name'])) + '</td></tr></table>';
+    var popupContent = '<img src="' + Autolinker.link(String(feature.properties['Pic'])) + '" style="max-width: 161px; height: auto;"/><table><tr><th scope="row">Name</th><td>' + Autolinker.link(String(feature.properties['Name'])) + '</td></tr></table>';
     layer.bindPopup(popupContent);
 
 
