--- a/ProjBanBaKhamin/BanBaKhamin.html
+++ b/ProjBanBaKhamin/BanBaKhamin.html
@@ -131,7 +131,7 @@
                             return {fillColor: feature.properties.color_qgis2leaf,
                                     color: '#000',
                                     weight: 0,
-                                    opacity: feature.properties.transp_qgis2leaf,
+                                    opacity: 0,
                                     fillOpacity: feature.properties.transp_qgis2leaf};
                             }
                         });
@@ -192,7 +192,7 @@
 
                             color: feature.properties.borderColor_qgis2leaf,
                             weight: 0,
-                            opacity: feature.properties.transp_qgis2leaf,
+                            opacity: 0,
                             fillOpacity: feature.properties.transp_qgis2leaf
                             })
                         }
